# beacon

./: .gitignore  README.rst  meson.build  meson_options.txt  settings.gradle
.github/workflows/: build.yml  release.yml
debian/: .gitignore  beacon-api.install  beacon-api.postinst  beacon-api.service  beacon-api.socket  beacon-api.sysusers  beacon-gpx.install  beacon-gpx.postinst  beacon-gpx.service  beacon-gpx.socket  beacon-receiver.docs  beacon-receiver.install  beacon-receiver.postinst  beacon-receiver.sysusers  changelog  control  rules
java/: build.gradle  meson.build
java/beacon/: BeaconClient.java  BigEndian.java  CRC16CCITT.java  Protocol.java
sql/: fixes.sql  grant.sql
src/api/: Database.cxx  Database.hxx  GetGPX.cxx  GetGPX.hxx  Handler.cxx  Handler.hxx  Main.cxx  Response.cxx  Response.hxx
src/event/: CoarseTimerEvent.hxx  EpollEvents.hxx  Features.h  Loop.cxx  Loop.hxx  PipeEvent.hxx  SignalEvent.cxx  SocketEvent.hxx  TimerEvent.hxx
src/event/net/: UdpListener.cxx  UdpListener.hxx  meson.build
src/geo/: GeoPoint.hxx
src/io/: Iovec.hxx  meson.build
src/lib/fmt/: meson.build
src/math/: Angle.hxx  Constants.hxx
src/net/: Features.hxx  ReceiveMessage.hxx  Resolver.cxx  SocketAddress.cxx  SocketAddress.hxx  StaticSocketAddress.hxx  ToString.cxx  ToString.hxx  meson.build
src/pg/: Array.cxx  Array.hxx  BinaryValue.hxx  Connection.cxx  Connection.hxx  DynamicParamWrapper.hxx  Error.cxx  Error.hxx  Notify.hxx  ParamWrapper.hxx  Result.hxx  Serial.cxx  Serial.hxx  meson.build
src/receiver/: Assemble.cxx  Assemble.hxx  Database.cxx  Database.hxx  Export.hxx  Import.hxx  Main.cxx  Protocol.hxx  Receiver.cxx  Receiver.hxx
src/util/: ByteOrder.hxx  CRC.cxx  CRC.hxx  Compiler.h  ConstBuffer.hxx  IntrusiveList.hxx  IterableSplitString.hxx  StringAPI.hxx  StringCompare.cxx  StringCompare.hxx  StringView.cxx  StringView.hxx  UriQueryParser.cxx  UriQueryParser.hxx  meson.build
src/web/: GetGPX.cxx
subprojects/: .gitignore
systemd/: beacon-receiver.service.in  meson.build
test/: SubmitFix.cxx  meson.build  replay.py
web/: index.html  map.js  menu.js  style.css  util.js
